--- a/app.yaml
+++ b/app.yaml
@@ -13,7 +13,9 @@ handlers:
 # Only pure Python libraries can be vendored
 # Python libraries that use C extensions can
 # only be included if they are part of the App Engine SDK 
-
+libraries:
+- name: django
+  version: 1.5
 
 
 
